--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uniapp-achieve",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "private": true,
   "scripts": {
     "serve": "npm run dev:h5",
@@ -27,38 +27,41 @@
     "serve:quickapp": "node node_modules/@dcloudio/uni-quickapp/bin/serve.js"
   },
   "dependencies": {
-    "@dcloudio/uni-app-plus": "^2.0.0-26920200409002",
-    "@dcloudio/uni-h5": "^2.0.0-26920200409002",
+    "@dcloudio/uni-app-plus": "^2.0.0-26920200424005",
+    "@dcloudio/uni-h5": "^2.0.0-26920200424005",
     "@dcloudio/uni-helper-json": "*",
-    "@dcloudio/uni-mp-alipay": "^2.0.0-26920200409002",
-    "@dcloudio/uni-mp-baidu": "^2.0.0-26920200409002",
-    "@dcloudio/uni-mp-qq": "^2.0.0-26920200409002",
-    "@dcloudio/uni-mp-toutiao": "^2.0.0-26920200409002",
-    "@dcloudio/uni-mp-weixin": "^2.0.0-26920200409002",
-    "@dcloudio/uni-stat": "^2.0.0-26920200409002",
+    "@dcloudio/uni-mp-alipay": "^2.0.0-26920200424005",
+    "@dcloudio/uni-mp-baidu": "^2.0.0-26920200424005",
+    "@dcloudio/uni-mp-qq": "^2.0.0-26920200424005",
+    "@dcloudio/uni-mp-toutiao": "^2.0.0-26920200424005",
+    "@dcloudio/uni-mp-weixin": "^2.0.0-26920200424005",
+    "@dcloudio/uni-stat": "^2.0.0-26920200424005",
+    "@dcloudio/uni-ui": "^1.1.9",
     "core-js": "^3.6.4",
     "flyio": "^0.6.2",
+    "node-sass": "^4.14.0",
     "regenerator-runtime": "^0.12.1",
+    "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
-    "vuex": "^3.0.1"
+    "vuex": "^3.3.0"
   },
   "devDependencies": {
-    "@dcloudio/uni-cli-shared": "^2.0.0-26920200409002",
-    "@dcloudio/uni-migration": "^2.0.0-26920200409002",
-    "@dcloudio/uni-template-compiler": "^2.0.0-26920200409002",
-    "@dcloudio/vue-cli-plugin-hbuilderx": "^2.0.0-26920200409002",
-    "@dcloudio/vue-cli-plugin-uni": "^2.0.0-26920200409002",
-    "@dcloudio/vue-cli-plugin-uni-optimize": "^2.0.0-26920200409002",
-    "@dcloudio/webpack-uni-mp-loader": "^2.0.0-26920200409002",
-    "@dcloudio/webpack-uni-pages-loader": "^2.0.0-26920200409002",
+    "@dcloudio/uni-cli-shared": "^2.0.0-26920200424005",
+    "@dcloudio/uni-migration": "^2.0.0-26920200424005",
+    "@dcloudio/uni-template-compiler": "^2.0.0-26920200424005",
+    "@dcloudio/vue-cli-plugin-hbuilderx": "^2.0.0-26920200424005",
+    "@dcloudio/vue-cli-plugin-uni": "^2.0.0-26920200424005",
+    "@dcloudio/vue-cli-plugin-uni-optimize": "^2.0.0-26920200424005",
+    "@dcloudio/webpack-uni-mp-loader": "^2.0.0-26920200424005",
+    "@dcloudio/webpack-uni-pages-loader": "^2.0.0-26920200424005",
     "@types/html5plus": "*",
     "@types/uni-app": "*",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
     "babel-plugin-import": "^1.11.0",
     "cross-env": "^7.0.2",
-    "mini-types": "*",
-    "miniprogram-api-typings": "^2.8.0-2",
+    "mini-types": "^0.1.2",
+    "miniprogram-api-typings": "^2.10.4",
     "postcss-comment": "^2.0.0",
     "vue-template-compiler": "^2.6.11"
   },
